migrate to List as set is overkill